--- a/src/index.css
+++ b/src/index.css
@@ -7,11 +7,31 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
+/* code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+} */
+
+.slide-in-left-enter {
+  transform: translateX(-100%);
 }
 
+.slide-in-left-enter-active {
+  transform: translateX(0);
+  opacity: 1;
+  transition: all 200ms;
+}
+
+.slide-in-left-exit {
+  transform: translateX(0%);
+  opacity: 1;
+}
+
+.slide-in-left-exit-active {
+  transform: translateX(-100%);
+  opacity: 0;
+  transition: all 200ms;
+}
 
 
 .center {
@@ -19,4 +39,4 @@ code {
   display: flex;
   justify-content: center;
   align-items: center;
-}
+} 
