--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,35 @@
-body {
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
+} */
 
 /* code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 } */
+
+
+
+
+
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap');
+
+* {
+  box-sizing: border-box;
+}
+
+html {
+  font-family: 'Open Sans', sans-serif;
+}
+
+body {
+  margin: 0;
+  background:whitesmoke;
+}
 
 .slide-in-left-enter {
   transform: translateX(-100%);
@@ -33,10 +52,9 @@ body {
   transition: all 200ms;
 }
 
-
 .center {
   text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
-} 
+}
