--- a/src/shared/components/FormElements/Button.css
+++ b/src/shared/components/FormElements/Button.css
@@ -1,10 +1,10 @@
 .button {
     font: inherit;
     padding: 0.5rem 1.5rem;
-    border: 1px solid #ff0055;
+    border: 1px solid #F4F3EE;
     border-radius: 4px;
-    background: #ff0055;
-    color: white;
+    background: #F4F3EE;
+    color: black;
     cursor: pointer;
     margin-right: 1rem;
     text-decoration: none;
