--- a/src/shared/components/Navigation/NavLinks.css
+++ b/src/shared/components/Navigation/NavLinks.css
@@ -70,7 +70,7 @@
     
     .nav-links button:hover,
     .nav-links button:active {
-      background: #f8df00;
+      background: #F4F3EE;
       color: #292929;
     }
   }
