--- a/src/shared/components/UIElements/Modal.css
+++ b/src/shared/components/UIElements/Modal.css
@@ -12,8 +12,8 @@
   .modal__header {
     width: 100%;
     padding: 1rem 0.5rem;
-    background: #2a006e;
-    color: white;
+    background:#F4F3EE;
+    color: black;
   }
   
   .modal__header h2 {
